k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-js-test-service
spec:
  selector:
    app: k8s-js-test
  type: LoadBalancer
  ports:
    - name: k8s-js-test-service
      port: 80
      targetPort: 8080
      protocol: TCP
